fix: adjust side nav overlap with success message on event form mobile view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,6 +60,7 @@ label[for$="event"] {
 .side-nav {
     background:#00c853;
     padding-top:10px;
+    z-index:1002;
 }
 
 .inline-block {
